--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "cardapio-app",
+  "name": "esfiharia-api",
   "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "mysql2": "^2.3.3"
+    "mysql2": "^3.9.0"
   }
 }
